#############################################################################
# LIBRARIES
#############################################################################


#############################################################################
# PROGRAMS
#############################################################################

INSTALL(FILES Auto-Update-BootCD.1           DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Auto-Update-BootCD             DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Auto-Update-Keys.1             DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Auto-Update-Keys               DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Backup-All-VSystems.1          DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Backup-All-VSystems            DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Backup-VSystem.1               DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Backup-VSystem                 DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Change-VSystem-CDImage.1       DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Change-VSystem-CDImage         DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Check-Nodes.1                  DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Check-Nodes                    DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Check-Nodes-Loop.1             DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Check-Nodes-Loop               DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Check-Research-Node.1          DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Check-Research-Node            DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES check_site.1                   DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES check_site                     DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES check_tunnel.1                 DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES check_tunnel                   DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Check-VSystem.1                DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Check-VSystem                  DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Clear-SSH-Node-Key.1           DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Clear-SSH-Node-Key             DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Convert-HDD-Images.1           DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Convert-HDD-Images             DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Create-New-SSH-Node-Keys.1     DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Create-New-SSH-Node-Keys       DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Fingerprint-SSH-Node-Keys.1    DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Fingerprint-SSH-Node-Keys      DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Get-Nodes.1                    DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Get-Nodes                      DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Get-NorNet-Configuration.1     DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Get-NorNet-Configuration       DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Get-Sites.1                    DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Get-Sites                      DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Get-Slice-Nodes.1              DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Get-Slice-Nodes                DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Get-Slices.1                   DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Get-Slices                     DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Get-Users.1                    DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Get-Users                      DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Interface-Setup.8              DESTINATION ${CMAKE_INSTALL_MANDIR}/man8)
INSTALL(FILES Interface-Setup                DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Make-FileSrv-Configuration.1   DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Make-FileSrv-Configuration     DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Make-Monitor-Configuration.1   DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Make-Monitor-Configuration     DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Make-Node-Configuration.1      DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Make-Node-Configuration        DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Make-Server-Configuration.1    DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Make-Server-Configuration      DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Make-Tunnelbox-Configuration.1 DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Make-Tunnelbox-Configuration   DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Make-VSystem-Template.1        DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Make-VSystem-Template          DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Node-Setup.1                   DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Node-Setup                     DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES nornetinfogenerator            DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Probe-Endpoint-Setup.1         DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Probe-Endpoint-Setup           DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Probe-Interface-Setup.1        DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Probe-Interface-Setup          DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Random-Sleep.1                 DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Random-Sleep                   DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Reset-Networking.1             DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Reset-Networking               DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Reset-VSystem.1                DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Reset-VSystem                  DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Routing-Rule-Setup.1           DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Routing-Rule-Setup             DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Server-Setup.1                 DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Server-Setup                   DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Server-Watchdog.1              DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Server-Watchdog                DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Set-OVF-Type.1                 DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Set-OVF-Type                   DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Show-VSystems.1                DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Show-VSystems                  DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Start-VSystem.1                DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Start-VSystem                  DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Stop-VSystem.1                 DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Stop-VSystem                   DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES System-Backup.1                DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES System-Backup                  DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES System-Info.1                  DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES System-Info                    DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES System-Maintenance.1           DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES System-Maintenance             DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Test-NTP-Configuration.1       DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Test-NTP-Configuration         DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Tunnelbox-Bootstrap-Helper.1   DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Tunnelbox-Bootstrap-Helper     DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Tunnelbox-NAT-Helper.1         DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Tunnelbox-NAT-Helper           DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Tunnelbox-Setup.1              DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Tunnelbox-Setup                DESTINATION ${CMAKE_INSTALL_BINDIR})
INSTALL(FILES Watchdog.1                     DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
INSTALL(FILES Watchdog                       DESTINATION ${CMAKE_INSTALL_BINDIR})


#############################################################################
# CONFIGURATION FILES
#############################################################################

INSTALL(FILES nornet-authorized_keys         DESTINATION ${CMAKE_INSTALL_PREFIX}/etc/nornet)


#############################################################################
# SOURCE DIRECTORIES
#############################################################################

ADD_SUBDIRECTORY(cron-apt)
ADD_SUBDIRECTORY(grub)
ADD_SUBDIRECTORY(vsystems)

ADD_SUBDIRECTORY(Artwork)
ADD_SUBDIRECTORY(Kontrollsenter)
ADD_SUBDIRECTORY(Monitor)
ADD_SUBDIRECTORY(WebServer)
ADD_SUBDIRECTORY(XDM)
