#############################################################################
# CONFIGURATION FILES
#############################################################################

INSTALL(FILES Xresources DESTINATION ${CMAKE_INSTALL_DATADIR}/nornet-x11)
INSTALL(FILES Xsetup     DESTINATION ${CMAKE_INSTALL_DATADIR}/nornet-x11)
